--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,1 @@
-@import url("base/base.css");
-@import url("base/btn.css");
-@import url("base/font/css3.css");
-@import url("layout/layout.css");
-@import url("layout/nav.css");
+@import url("./base/inputype.css");
