--- a/pages/inputype.css
+++ b/pages/inputype.css
@@ -19,33 +19,58 @@ input[type="text"], select, textarea {
   box-shadow: none;
   border-radius: none;
 }
+
 input[type="text"]:focus {
   outline: none;
 }
 
 
 input[type=submit] {
-    background-color: #38a5e0;
+    background-color: #ef4f4f;
     color: white;
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     margin-top: 10px; 
+    transition: 0.5s;
+    width: 97%;
 }
 
 
 
 input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: #d13c3c;
 }
 
 .container {
-    border-radius: 5px;
-    background-color: #2f2f30;
-    color: #fff;
+    background-color: #555;
+    color: #000;
     padding: 20px;
+    width: 97%;
+    float: left;
+}
+
+.container-contactform {
+    background-color: #ffffff;
+    padding: 20px;
+    width: 50%;
+    float: left;
+    box-shadow: 2px 5px 10px #000;
+}
+
+.Contact-detail{
+	float: left;
+	border-radius: 5px;
+    background-color: #2f2f30;
+    padding: 20px;
+    margin-left: 10px;
     width: 40%;
+    float: left;
+}
+
+a:link{
+	color: #ddd;
 }
 
 
