Commented about section of index file

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,5 @@
 @import url("./base/inputype.css");
+@import url("./base/btn.css");
+@import url("./base/base.css");
+@import url("./layout/layout.css");
+@import url("./layout/nav.css");
