--- a/css/base/base.css
+++ b/css/base/base.css
@@ -17,3 +17,14 @@ small{
   font-size:.6em;
   color: #817f7f;
 }
+.container{
+	width: 1270px;
+	margin: 0px auto;
+	background-color: #d2d2d2;
+	margin-top: 10px;
+}
+
+.wrapper{
+	text-align: center;
+	color: black;
+}
